<resources>
    <string name="app_name">toTrade</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="what_courses_are_you_nlooking_for">What courses are you\nlooking for?</string>
    <string name="search_course">Search course</string>
    <string name="all_courses">All courses</string>
    <string name="view_all">View all</string>
    <string name="see_course_on_udemy">Course on udemy</string>
    <string name="instructor_on_udemy">Instructor on udemy</string>
    <string name="instructors">Instructors</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="curriculum">Curriculum</string>
    <string name="reviews">Reviews</string>
    <string name="remove">Remove</string>
    <string name="title_Wishlist">Wishlist</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="buy">Buy</string>
    <string name="top_searches">Top searches</string>
    <string name="course_details">Course Details</string>
    <string name="not_connected">Not connected to the Internet!</string>
    <string name="network_error">Network error</string>
    <string name="bad_request">Bad request parameters</string>
    <string name="server_error">Server error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_word">searchWord</string>
    <string name="price">Price</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="category">Category</string>
    <string name="Forex">Forex</string>
    <string name="design">Design</string>
    <string name="finance_amp_accounting"><![CDATA[Finance & Accounting]]></string>
    <string name="development">Development</string>
    <string name="marketing">Marketing</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="it_amp_software"><![CDATA[IT & Software]]></string>
    <string name="health_amp_fitness"><![CDATA[Health & Fitness]]></string>
    <string name="office_productivity">Office Productivity</string>
    <string name="personal_development">Personal Development</string>
    <string name="photography_amp_video"><![CDATA[Photography & Video]]></string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="back_online">We are back online again :)</string>
    <string name="wishlist_ed">Wishlist-ed</string>
    <string name="error_curr">We are having trouble loading curriculum.\nPlease connect to the network and refresh</string>
    <string name="error_reviews">We are having trouble loading reviews.\nPlease connect to the network and refresh</string>
    <string name="course_wishlisted">Course wishlist-ed!!</string>
    <string name="removed_from_wishlist">Course removed from wishlist!!</string>
    <string name="delete_wishlist_menu">Delete wishlist menu</string>
    <string name="search">Search</string>
    <string name="empty_wishlist">Empty wishlist</string>
    <string name="delete_all_msg">You are about to delete all courses in wishlist</string>
    <string name="no_wishlists">You don\'t have any courses in wishlist right now.</string>
    <string name="empty_cart_msg">So sad!! Your cart is empty.\nWe are positive, you will fill it soon :)</string>
    <string name="in_cart">In cart</string>
    <string name="course_added_to_cart">Course added to cart</string>
    <string name="removed_from_cart">Course removed from cart.</string>
    <string name="privacy_policy">Privacy policy</string>
	
    <string name="login_tiet_email">Email</string>
    <string name="login_tiet_password">Password</string>
    <string name="login_tv_forgot_your_password">Forgot your password?</string>
    <string name="login_btn_login">Login</string>
    <string name="login_tv_sign_up_here">Don\'t have an account? <b>Sign up here</b></string>
    <string name="sign_up_tiet_full_name">Full name</string>
    <string name="sign_up_tiet_email">Email</string>
    <string name="sign_up_tiet_password">Password</string>
    <string name="sign_up_btn_sign_up">Sign up</string>
    <string name="sign_up_tv_login_here">Already have an account? <b>Login here</b></string>
    <string name="home_tv_welcome">Good %s,\n%s!</string>
    <string name="home_btn_logout">Logout</string>
    <string name="sign_up_error_null">Fill this field</string>
    <string name="sign_up_error_password_unsafe">Password must be at least 6 characters length</string>
    <string name="sign_up_error_email_invalid">Email invalid</string>
    <string name="login_error_null">Fill this field</string>
    <string name="login_error_email_invalid">Email invalid</string>
</resources>