<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/key_line_margin"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_login_email"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:hint="@string/login_tiet_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_login_password"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:hint="@string/login_tiet_password"
            android:inputType="textPassword"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_login_forgot_your_password"
        style="@style/ClickableTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_tv_forgot_your_password"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login_login"
        style="@style/ButtonStyle.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login_btn_login" />

    <TextView
        android:id="@+id/tv_login_sign_up_here"
        style="@style/ClickableTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/login_tv_sign_up_here"
        android:textColor="#1976D2" />

</LinearLayout>